--- a/ban-client/index.html
+++ b/ban-client/index.html
@@ -2,15 +2,26 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/logo-ban-200.webp" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+            rel="stylesheet"
+        />
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
             rel="stylesheet"
         />
+
+        <!-- Brand -->
         <title>BAN Talent</title>
+        <link rel="icon" type="image/svg+xml" href="/logo-ban-200.webp" />
     </head>
     <body>
         <div id="root"></div>
